<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/Caltopo_Configuration"
            android:textAlignment="center"
            android:textAppearance="@style/Details.Heading"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/ct_saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <Button
            android:id="@+id/ct_saveButton"
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/ct_SaveButton"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ct_closeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ct_closeButton"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="@string/ct_closeButton"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <TextView
            android:id="@+id/groupLabelText"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="none"
            android:textAppearance="@style/Details.Heading"
            android:linksClickable="false"
            android:longClickable="false"
            android:singleLine="true"
            android:text="@string/ct_groupid"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/groupIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="viewStart"
            android:singleLine="true"
            android:inputType="text|textNoSuggestions"
            android:textSize="18sp"
            android:text="initial text content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/groupLabelText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="102dp">

        <TextView
            android:id="@+id/minChangeLabel"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="false"
            android:inputType="none"
            android:singleLine="true"
            android:text="@string/ct_minChgFt"
            android:textAlignment="textEnd"
            android:textAppearance="@style/Details.Heading"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/minChangedText"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:inputType="text|textNoSuggestions"
            android:singleLine="true"
            android:text="@string/ct_minChgFtVal"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/minChangeLabel"
            tools:layout_editor_absoluteY="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="102dp">

        <Button
            android:id="@+id/archiveDirButton"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:inputType="none"
            android:singleLine="true"
            android:text="@string/ct_archiveDirDesc"
            android:textAlignment="textEnd"
            android:textAppearance="@style/Details.Heading"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/archiveDirVal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:inputType="none"
            android:text="@string/ct_archivePath"
            android:textAlignment="viewStart"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/archiveDirButton"
            tools:layout_editor_absoluteY="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/ct_mapListview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp" />
</LinearLayout>